[gd_scene load_steps=6 format=3 uid="uid://b5h8kak2m3n4p"]

[ext_resource type="Script" path="res://ui/main_menu.gd" id="1_script"]
[ext_resource type="FontFile" uid="uid://c3w61p24ge26h" path="res://snowbell-font/Snowbell-Wp4g9.ttf" id="2_font"]
[ext_resource type="Texture2D" uid="uid://e1x2c3l4a5m6a7t8i" path="res://ui/exclamation_mark.svg" id="3_exclamation"]
[ext_resource type="Script" path="res://ui/exclamation_mark.gd" id="4_exclamation_script"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.2, 0.3, 0.4, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.8, 0.8, 0.8, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)

[node name="MenuContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="MenuContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.9, 0.6, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 64
text = "ERROR 67"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="MenuContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="ButtonContainer" type="VBoxContainer" parent="MenuContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="PlayButton" type="Button" parent="MenuContainer/ButtonContainer"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 0.9, 0.6, 1)
theme_override_colors/font_pressed_color = Color(0.8, 0.8, 0.8, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_1")
theme_override_styles/hover = SubResource("StyleBoxFlat_1")
theme_override_styles/pressed = SubResource("StyleBoxFlat_1")
text = "PLAY"

[node name="SettingsButton" type="Button" parent="MenuContainer/ButtonContainer"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 0.9, 0.6, 1)
theme_override_colors/font_pressed_color = Color(0.8, 0.8, 0.8, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_1")
theme_override_styles/hover = SubResource("StyleBoxFlat_1")
theme_override_styles/pressed = SubResource("StyleBoxFlat_1")
text = "SETTINGS"

[node name="QuitButton" type="Button" parent="MenuContainer/ButtonContainer"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 0.9, 0.6, 1)
theme_override_colors/font_pressed_color = Color(0.8, 0.8, 0.8, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_1")
theme_override_styles/hover = SubResource("StyleBoxFlat_1")
theme_override_styles/pressed = SubResource("StyleBoxFlat_1")
text = "QUIT"

[node name="LeftExclamationTop" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 50.0
offset_top = -150.0
offset_right = 82.0
offset_bottom = -86.0
grow_vertical = 2
texture = ExtResource("3_exclamation")
expand_mode = 1
stretch_mode = 5
script = ExtResource("4_exclamation_script")
fade_duration = 0.8
fade_delay = 0.3

[node name="LeftExclamationBottom" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 50.0
offset_top = 50.0
offset_right = 82.0
offset_bottom = 114.0
grow_vertical = 2
texture = ExtResource("3_exclamation")
expand_mode = 1
stretch_mode = 5
script = ExtResource("4_exclamation_script")
fade_duration = 1.0
fade_delay = 0.5

[node name="RightExclamationTop" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -82.0
offset_top = -150.0
offset_right = -50.0
offset_bottom = -86.0
grow_horizontal = 0
grow_vertical = 2
texture = ExtResource("3_exclamation")
expand_mode = 1
stretch_mode = 5
script = ExtResource("4_exclamation_script")
fade_duration = 0.9
fade_delay = 0.4

[node name="RightExclamationBottom" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -82.0
offset_top = 50.0
offset_right = -50.0
offset_bottom = 114.0
grow_horizontal = 0
grow_vertical = 2
texture = ExtResource("3_exclamation")
expand_mode = 1
stretch_mode = 5
script = ExtResource("4_exclamation_script")
fade_duration = 1.1
fade_delay = 0.2
